# fashion-ai-sales-platform

./: .gitignore  CHANGELOG_V1.0.0.md  ENTERPRISE_READY_REPORT.md  INSTALLATION.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  backup_database.ps1  restore_database.ps1  start.ps1
backend/: .env.example  alembic.ini  backend.err  create_db_temp.py  executive_test.xlsx  pyproject.toml  seed.py  seed_admin.py  seed_crm_demo.py  test_db_conn.py  test_e2e_ai_live.py  test_import.py  tmp_body.json  tmp_crm.xlsx  tmp_executive.xlsx  tmp_pipeline.xlsx
backend/ai_sales_agent_saas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_enterprise_auth_foundation.py  0002_enterprise_customers_crm.py  0003_enterprise_products_catalog.py  0004_conversations_messaging.py  0005_conversations_core.py  0006_customer_conversation_metrics.py  0007_sales_intelligence_fields.py  0008_ai_live_tables.py  0009_conversation_memories.py  0010_orders_management.py  0011_inventory_management.py  0012_whatsapp_business.py  0013_admin_enterprise.py  0014_ai_live_fk_core.py  0015_sales_pipeline.py  0016_automation_engine.py
backend/app/: main.py
backend/app/ai/: README.md  config.py  dependencies.py  router.py
backend/app/ai_live/: dependencies.py  models.py  repository.py  router.py  schemas.py
backend/app/api/: router.py
backend/app/config/: production.py
backend/scripts/: DEPLOYMENT_AUDIT.md  demo_seed.py
backend/tests/: _fix_auth.py  _fix_schemas.py  conftest.py  sales_conversation_scenarios.py
(+583 files in other folders)
