[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sales-agent-saas-backend"
version = "0.1.0"
description = "FastAPI backend foundation for a multi-tenant AI Sales Agent SaaS for fashion businesses."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "bcrypt>=4.0.0",
  "openai>=1.55.0",
  "openpyxl>=3.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.2.0",
  "cryptography>=43.0.0",
  "reportlab>=4.0.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.7"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
exclude = ["alembic", "alembic.*", "tests", "tests.*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
